--- a/15_11_2021.css
+++ b/15_11_2021.css
@@ -1,8 +1,12 @@
 h1    {
-        font-size: 24pt;
-        color: red;
-        text-decoration: underline;
-        font-family: tahoma, helvatica, sans serif;
+               text-align: center;
+               border: thick solid red;
+               text-decoration: none;
+               padding: 1ex;
+               width: 50%;
+               font-size: 24pt;
+               color: red;
+               font-family: tahoma, helvatica, sans serif;
       }
 em    {
        font-style: normal;
@@ -14,4 +18,23 @@ em    {
 ul { 
         list-style-type: square;
 }
+
+a:hover {
+          text-decoration: none;
+}
+
+li:first-child  {
+                 border: thick solid green;
+                 margin-bottom: 1em;
+                 margin-top: 1em;
+                 paddding: 1ex;
+                 width: 40%;
+}
+
+p.centered  {
+              text-align: center;
+              width: 50%;
+}
+
+
    
