--- a/15_11_2021.css
+++ b/15_11_2021.css
@@ -27,7 +27,7 @@ li:first-child  {
                  border: thick solid green;
                  margin-bottom: 1em;
                  margin-top: 1em;
-                 paddding: 1ex;
+                 padding: 1ex;
                  width: 40%;
 }
 
